--- a/src/styles/TransaccionesTable.css
+++ b/src/styles/TransaccionesTable.css
@@ -1,24 +1,44 @@
 /* src/styles/TransaccionesTable.css */
+.table-container {
+  margin: 20px auto; /* Centrar el contenedor horizontalmente */
+  overflow-x: auto; /* Añadir scroll horizontal si es necesario */
+  max-width: 1000px; /* Ajusta el ancho máximo del contenedor si es necesario */
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 20px;
+  margin: 20px 0;
+  font-size: 16px;
+  text-align: left;
+  background-color: #f9f9f9;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 th, td {
+  padding: 12px 15px;
   border: 1px solid #ddd;
-  padding: 8px;
 }
 
 th {
-  background-color: #f2f2f2;
-  text-align: left;
+  background-color: #0073AB;
+  color: white;
+  font-weight: bold;
 }
 
 tr:nth-child(even) {
-  background-color: #f9f9f9;
+  background-color: #f2f2f2;
 }
 
 tr:hover {
-  background-color: #ddd;
+  background-color: #e9e9e9;
+  cursor: pointer;
+}
+
+td {
+  color: #333;
+}
+
+th, td {
+  text-align: center; /* Centrar el texto en las celdas */
 }
