--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,4 +1,12 @@
 /* src/styles/Dashboard.css */
+.screen {
+  height: 170vh;
+  background-color: #086290;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .dashboard-container {
   display: grid;
   grid-template-columns: 1fr 2fr;
@@ -31,13 +39,13 @@
 
 .table-container {
   grid-column: 1 / 3;
-  margin: 20px 180px; /* Centrar el contenedor horizontalmente */
+  margin: 5px auto; /* Centrar el contenedor horizontalmente */
   overflow-x: auto; /* Añadir scroll horizontal si es necesario */
-  max-width: 2000px; /* Ajusta el ancho máximo del contenedor si es necesario */
+  max-width: 1000px; /* Ajusta el ancho máximo del contenedor si es necesario */
 }
 
 table {
-  width: 100%;
+  width: 900px;
   border-collapse: collapse;
   margin: 20px 0;
   font-size: 16px;
@@ -47,12 +55,13 @@ table {
 }
 
 th, td {
-  padding: 12px 15px;
+  font-size: 20px;
+  padding: 10px 10px;
   border: 1px solid #ddd;
 }
 
 th {
-  background-color: #0073AB;
+  background-color: #a222b5;
   color: white;
   font-weight: bold;
 }
@@ -78,17 +87,17 @@ form {
   display: flex;
   flex-direction: column;
   gap: 15px;
-  margin-top: 50px;
 }
 
 button {
+  width: 80%;
+  margin-left: 28px;
   padding: 10px;
   border: none;
   border-radius: 8px;
   cursor: pointer;
   font-size: 16px;
   font-weight: bold;
-  margin-top: auto;
 }
 
 button.logout-button {
@@ -111,22 +120,35 @@ button.submit-button:hover {
 }
 
 input {
+  width: 85%;
+  height: 25px;
+  margin-left: 20px;
   font-size: 18px;
+  text-align: center;
+border-radius: 8px;
 }
 
 select {
-  width: 100%; /* Ajusta el ancho según tus necesidades */
+  width: 85%; /* Ajusta el ancho según tus necesidades */
   height: 35px; /* Ajusta la altura según tus necesidades */
+  margin-left: 24px;
   padding: 8px;
   border-radius: 8px;
   border: 1px solid #ddd;
   background-color: #f9f9f9;
   font-size: 16px;
   color: #333;
-  margin-top: -20px;
+  margin-top: 10px;
 }
 
 select option {
   padding: 10px; /* Ajusta el padding según tus necesidades */
   background-color: #ffffff; /* Fondo de las opciones */
+  text-align: center;
+}
+
+h3 {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 20px;
 }
