--- a/src/styles/LoginForm.css
+++ b/src/styles/LoginForm.css
@@ -1,7 +1,7 @@
 /* Estilos inspirados en el diseño de la aplicación React Native */
 
 .screen {
-  height: 100vh;
+  height: 50vh;
   background-color: #0073AB;
   display: flex;
   justify-content: center;
@@ -9,6 +9,7 @@
 }
 
 .container {
+  margin-bottom: 20%;
   display: flex;
   flex-direction: column;
   align-items: center;
