--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,20 +1,22 @@
 /* src/styles/Dashboard.css */
 .screen {
-  height: 170vh;
+  min-height: 100vh;
   background-color: #086290;
   display: flex;
   justify-content: center;
-  align-items: center;
-  max-height: 1000px;
+  align-items: flex-start; /* Alinear al inicio verticalmente */
+  overflow: auto; /* Permitir desplazamiento vertical */
+  padding: 20px;
 }
 
 .dashboard-container {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  grid-template-rows: auto auto;
   gap: 20px;
   padding: 20px;
   font-size: large;
+  max-width: 1200px;
+  width: 100%;
 }
 
 .sidebar {
@@ -27,8 +29,8 @@
   border: 1px solid #020000; /* Borde del contenedor */
   border-radius: 8px; /* Esquinas redondeadas */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra */
-  width: 300px; /* Ancho fijo del contenedor */
-  max-width: 100%; /* Ajusta el ancho máximo del contenedor si es necesario */
+  width: 100%;
+  max-width: 300px; /* Ajusta el ancho máximo del contenedor si es necesario */
 }
 
 .chart {
@@ -36,17 +38,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column; /* Colocar el título y la gráfica en una columna */
 }
 
 .table-container {
   grid-column: 1 / 3;
-  margin: 5px auto; /* Centrar el contenedor horizontalmente */
+  margin: 20px auto; /* Centrar el contenedor horizontalmente */
   overflow-x: auto; /* Añadir scroll horizontal si es necesario */
   max-width: 1000px; /* Ajusta el ancho máximo del contenedor si es necesario */
 }
 
+.table-scroll {
+  max-height: 400px; /* Ajusta la altura máxima del contenedor de la tabla */
+  overflow-y: auto; /* Añadir scroll vertical */
+}
+
 table {
-  width: 900px;
+  width: 100%;
   border-collapse: collapse;
   margin: 20px 0;
   font-size: 16px;
@@ -91,8 +99,7 @@ form {
 }
 
 button {
-  width: 80%;
-  margin-left: 28px;
+  width: 100%;
   padding: 10px;
   border: none;
   border-radius: 8px;
@@ -121,18 +128,16 @@ button.submit-button:hover {
 }
 
 input {
-  width: 85%;
-  height: 25px;
-  margin-left: 20px;
+  width: 100%;
+  height: 35px;
   font-size: 18px;
   text-align: center;
-border-radius: 8px;
+  border-radius: 8px;
 }
 
 select {
-  width: 85%; /* Ajusta el ancho según tus necesidades */
+  width: 100%; /* Ajusta el ancho según tus necesidades */
   height: 35px; /* Ajusta la altura según tus necesidades */
-  margin-left: 24px;
   padding: 8px;
   border-radius: 8px;
   border: 1px solid #ddd;
