--- a/src/styles/LoginForm.css
+++ b/src/styles/LoginForm.css
@@ -1,36 +1,64 @@
-/* Estilos inspirados en el diseño de la aplicación React Native */
+/* src/styles/LoginForm.css */
 
 .screen {
-  height: 50vh;
+  height: 100vh; /* Ajustar la altura para ocupar toda la pantalla */
   background-color: #0073AB;
   display: flex;
   justify-content: center;
   align-items: center;
-  max-height: 1000px;
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   background-color: #64B5F6;
   width: 100%;
-  margin-bottom: 200px;
   max-width: 400px;
-  padding: 16px;
+  height: 500px;
+  padding: 10px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .textInput {
+  width: 300px; /* Ajusta el ancho aquí */
+  font-size:x-large;
+  padding: 12px;
+  border-radius: 8px;
+  margin: 8px 0;
+  box-sizing: border-box; 
+}
+
+.botonIniciarSesion { /* Agregar el punto (.) antes del nombre de la clase */
+  width: 300px; /* Modifico este tamaño */
+  padding: 12px;
+  border-radius: 8px;
+  margin: 8px 0;
+  box-sizing: border-box; /* Asegurar que el padding no aumente el tamaño total del elemento */
+}
+
+.botonCrearCuenta { /* Agregar el punto (.) antes del nombre de la clase */
+  width: 300px; /* Modifico este tamaño */
+  padding: 12px;
+  border-radius: 8px;
+  margin: 8px 0;
+  box-sizing: border-box; /* Asegurar que el padding no aumente el tamaño total del elemento */
+}
+
+.textInput {
   color: black;
   border: 1px solid #ccc;
-  border-radius: 8px;
   background-color: white;
-  padding: 12px;
-  width: 95%;
-  margin: 8px 0px;
+}
+
+button { /* Cambiar .button a button */
+  background-color: #E3F2FD;
+  color: #000;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  border: none; /* Asegurar que los botones no tengan bordes */
+}
+
+button:hover { /* Cambiar .button:hover a button:hover */
+  background-color: #BBDEFB;
 }
 
 .text {
@@ -45,25 +73,6 @@
   height: 150px;
   object-fit: contain;
   margin-bottom: 20px;
-}
-
-.button {
-  background-color: #E3F2FD;
-  padding: 12px 24px;
-  border: none;
-  border-radius: 8px;
-  margin-top: 16px;
-  font-size: 16px;
-  font-weight: 600;
-  color: #000;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  display: flex;  /* Agregado para centrar el contenido */
-  justify-content: center;  /* Agregado para centrar el contenido */
-}
-
-.button:hover {
-  background-color: #BBDEFB;
 }
 
 .error {
